force-app/main/default/objects/clofor_com_cfs__FTMSSOCashTrx__c/fields/clofor_com_cfs__CashTrx__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashTrx__c</fullName>
    <label>Cash Trx</label>
    <referenceTo>clofor_com_cfs__CASH_BOOK__c</referenceTo>
    <relationshipLabel>F/TMS S/O+CASH</relationshipLabel>
    <relationshipName>FTMSSOCashTrx</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>