force-app/main/default/objects/clofor_com_cfs__FTMSSOCashTrx__c/fields/clofor_com_cfs__FTMSSO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FTMSSO__c</fullName>
    <label>F/TMS S/O</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>F/TMS S/O+CASH TRX</relationshipLabel>
    <relationshipName>FTMSSOCashTrx</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>